# liteapi

./: .gitignore  README.md  pyproject.toml  setup.py  test.py
docs/: Introduction.md  examples.md  extending_mime_types.md  getting_started.md  handling_errors.md  index.md  installation.md  introduction.md
examples/: cert.pem  data_verification.py  documentation.py  getting_started.py  handle_yaml.py  key.pem  query_string.py  request_with_json_data.py  security.py  ssl_example.py
liteapi/: BaseAPIRequest.py  __init__.py  http_request.py  liteapi.py
src/liteapi/: APIModel.py  BaseAPIRequest.py  __init__.py  _internals.py  errno.py  error_no.py  exception.py  http_request.py  http_response.py  liteapi.py
src/liteapi.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/liteapi/docs/: __init__.py  annotate.py  docs.py
src/liteapi/security/: __init__.py  base_auth.py  basic_auth.py  digest_auth.py  exception.py  oauth2_auth.py
src/liteapi/verifiers/: __init__.py  exception.py  verifiers.py
tests/: testInternals.py  test_Internals.py  test_auth_internals.py  test_common.py
