[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "liteapi"
version = "0.1"
authors = [
    {name="Kamal Abdel Wahab", email="kamal.abdelwahab@gmail.com"}
]
description = "Lite python API framework"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent"
]

[project.urls]
"Homepage" = "https://github.com/cpp-e/liteapi"
"Bug Tracker" = "https://github.com/cpp-e/liteapi/issues"